<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@drawable/post"
        android:contentDescription="@string/post_image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/likePost"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/like"
        android:padding="8dp"
        android:contentDescription="@string/like_button_description"
        app:layout_constraintTop_toBottomOf="@id/postImage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"/>

    <ImageView
        android:id="@+id/dislikePost"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/dislike"
        android:contentDescription="@string/dislike_button_description"
        app:layout_constraintTop_toTopOf="@id/likePost"
        app:layout_constraintBottom_toBottomOf="@id/likePost"
        app:layout_constraintStart_toEndOf="@id/likePost"
        android:layout_marginStart="16dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/postTitle"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/post_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="8dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/dislikePost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/postDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/postTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/post_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>